--- a/pokedex-app/src/pages/pokemon_description/Pokemon.css
+++ b/pokedex-app/src/pages/pokemon_description/Pokemon.css
@@ -7,3 +7,56 @@
     height: 100%;
     padding-bottom: 50px;
 }
+
+.pokemon-details .main-card {
+    display: flex;
+}
+
+.main-card {
+    display: flex;
+    flex-direction: column;
+    
+    padding: 30px;
+    border-radius: 15px;
+    width: 500px;
+
+}
+
+.main-card .header {
+    display: flex;
+    justify-content: space-between;
+}
+
+.main-card .header .text-id {
+    display: flex;
+    flex-direction: column;
+
+    height: 100px;
+}
+
+.main-card .header .props {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    
+    width: 200px;
+}
+
+.main-card .body .img {
+    width: 400px;
+    height: auto;
+
+    margin-left: 40px;
+}
+
+.main-card .footer {
+    display: flex;
+    justify-content: space-between;
+    padding-left: 60px;
+    padding-right: 60px;
+}
+
+.main-card .footer .footerText {
+    display: flex;
+    flex-direction: column;
+}
